# neurorust

./: .gitignore  Cargo.toml  README.md  flake.nix
matrix/: Cargo.toml
matrix/benches/: matrix_bench.rs
matrix/src/: lib.rs  main.rs
neurorust/: Cargo.toml
neurorust/docs/: layer.md
neurorust/src/: activation.rs  decision_tree.rs  gradient.rs  layer.rs  lib.rs  loss.rs  network.rs  optimizer.rs  stage.rs  utils.rs
src/: activation.rs  decision_tree.rs  gradient.rs  layer.rs  layer.rs.bak  lib.rs  loss.rs  matrix.rs  model.rs  network.rs  optimizer.rs  utils.rs
