[package]
name = "neurorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
ctor = "0.2.8"
