[package]
name = "neurorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
color-eyre = "0.6.3"
csv = "1.3.1"
env_logger = "0.11.5"
log = "0.4.22"
ndarray = "0.15.6"
pyo3 = { version = "0.23.4", optional = true }
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
ctor = "0.2.8"

[features]
python = ["dep:pyo3"]
